fix: Resolve overflow issue affecting layout

--- a/src/app/features/hero/components/right-lateral/right-lateral.component.scss
+++ b/src/app/features/hero/components/right-lateral/right-lateral.component.scss
@@ -3,6 +3,7 @@
 
 div {
   height: 480px;
+  overflow: hidden;
   @include flexbox($direction: column, $justify: space-between);
 
   #mailme {
